testdata/golden/invalid/syntax/invalid_dates.cm
# CalcMark Invalid Date Syntax Tests

This file contains date expressions that should FAIL to parse.
These validate error handling and help define what is NOT valid CalcMark syntax.

---

## Invalid Date Keywords

# Misspelled keywords
todya
tommorow
yesteday
toady

# Invalid relative keywords
this weak
next moth
last yer
previous week
current month

---

## Invalid Month Names

# Misspelled months
Decembr 12
Januray 1
Feburary 28
Aprill 1

# Incomplete month names
Dec
January
Mar

# Invalid month + day combinations
February 30
February 31
April 31
June 31
September 31
November 31

# Day out of range
December 32
January 0
March -1
July 40

---

## Invalid Date Formats

# Day without month
12
25

# Month without day/year (ambiguous - could be identifier)
December
January

# Year without month/day
2025
2026

# Invalid separators
Dec-12
December/25
12.25.2025

# Multiple years
Dec 12 2025 2026
January 1 2024 2025

# Invalid year format
Dec 12 25
January 1 99

---

## Invalid Date Arithmetic

# Missing operands
today +
tomorrow -
+ 2 days
- 3 weeks

# Missing duration
today + 
tomorrow - 
Dec 25 +

# Invalid operators with dates
today * 2
tomorrow / 3
yesterday % 4
Dec 25 ^ 2

# Incompatible operations
today + tomorrow
Dec 12 + Jan 1
2 days + 3 days

# Invalid "from" syntax
from today
2 weeks from
from 2 weeks
weeks from today

---

## Invalid Duration Syntax

# Missing units
2 
5

# Invalid units
2 daze
3 weakz
1 munth
5 yearz

# Missing connector
2 weeks 3 days
1 year 6 months

# Invalid connector
2 weeks or 3 days
1 month plus 2 weeks

# Multiple "and" without value
2 weeks and and 3 days
1 year and days

---

## Invalid Compound Expressions

# Incomplete expressions
x = today +
deadline = Dec 25 -
start = 

# Type mismatches
x = 10 + today
y = tomorrow * 5
z = "hello" + 2 days

# Invalid natural language
2 days after
3 weeks before
until Dec 25
since yesterday

---

## Edge Cases

# Empty
(blank line above should fail)

# Just whitespace
   

# Special characters
today!
tomorrow?
Dec@12
January#1

# Numbers that look like dates but aren't
12.25
01.15
2025.12.25
